# quizia-app

./: .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml
components/: welcome.py
models/: question.py  quiz_engine.py
services/: llm_client.py
utils/: helpers.py  session_state.py
