[project]
name = "quizia-app"
version = "0.1.0"
description = "QuizIA - App for generating and taking quizzes with AI assistance"
readme = "README.md"
authors = [
    { name = "Axel García", email = "aisaac.gargon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.99.5",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.0",
]
